--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "apiproxy",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.json --host 0.0.0.0",
+    "start": "ng serve --proxy-config proxy.json --port 4200 --host 0.0.0.0",
     "build": "ng build",
     "build:prod": "ng build  --prod",
     "hmr": "ng serve --configuration hmr",
